styles.css
/*-------------------------------- RESET -----------------------------------*/
*,
*::before,
*::after {
    box-sizing: border-box;
}

* {
    margin: 0;
}

html,
body {
    height: 100%;
}

body {
    line-height: 1.5;
    -webkit-font-smoothing: antialiased;
}

img,
picture,
video,
canvas,
svg {
    max-width: 100%;
}

input,
button,
textarea,
select {
    font: inherit;
}

p,
h1,
h2,
h3,
h4,
h5,
h6 {
    overflow-wrap: break-word;
}

#root {
    /*only with frameworks: adjuste to match the framework*/
    isolation: isolate;
}

@media (prefers-reduced-motion: reduce) {
    html:focus-within {
        scroll-behavior: auto;
    }

    *,
    ::before,
    ::after {
        animation-duration: 0.01ms !important;
        animation-iteration-count: 1 !important;
        transition-duration: 0.01ms !important;
        scroll-behavior: auto !important;
    }
}

/*---------------------- END RESET -----------------------*/

/*------------------- To work with rem more easy---------------------*/

:root {
    font-size: 62.5%;
    /* Primary */

    --light-red: hsl(0, 100%, 67%);
    --orangey-yellow: hsl(39, 100%, 56%);
    --green-teal: hsl(166, 100%, 37%);
    --cobalt-blue: hsl(234, 85%, 45%);

    /* Gradients */

    /*(background)*/
    --light-slate-blue: hsl(252, 100%, 67%);
    --light-royal-blue: hsl(241, 81%, 54%);

    /*(circle)*/
    --violet-blue: hsla(256, 72%, 46%, 1);
    --persian-blue: hsla(241, 72%, 46%, 0);

    /* #Neutral */
    --white: hsl(0, 0%, 100%);
    --pale-blue: hsl(221, 100%, 96%);
    --light-lavender: hsl(241, 100%, 89%);
    --dark-gray-blue: hsl(224, 30%, 27%);
    --dark-navy: hsla(223, 30%, 27%, 1);

}

/*----------------------------------------------------------------*/

body {
    font-family: 'Hanken Grotesk', sans-serif;
    display: flex;
    align-items: center;
    justify-content: center;
    background: hsla(220, 100%, 96%, 1);
}

.main {
    box-shadow: 0px 30px 60px rgba(61, 108, 236, 0.15);
    border-radius: 32px;
    overflow: hidden;
    max-width: 736px;
    background: var(--white);
    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
}

.result {
    background: linear-gradient(180deg, #7755FF 0%, #6943FF 0.01%, #2F2CE9 100%);
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 356px;
    border-radius: 32px;
}

.result__title {
    color: hsla(0, 0%, 85%, 1);
    font-size: 1.8rem;
    font-weight: 500;
    margin: 25px 0;
}

.result__subtitle {
    color: var(--white);
    font-size: 2.4rem;
    margin: 15px 0;
}

.result__description {
    color: hsla(0, 0%, 85%, 1);
    font-size: 1.6rem;
    margin: 0px 40px;
    text-align: center;
}

.score-container {
    background: linear-gradient(180deg, #4D21C9 0%, rgba(37, 33, 201, 0) 100%, rgba(37, 33, 201, 0) 100%);
    border-radius: 50%;
    width: 140px;
    height: 140px;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

.score-container__score {
    color: var(--white);
    font-size: 5.6rem;
    font-weight: 800;
    line-height: 1.2;
}

.score-container__max-score {
    color: var(--light-lavender);
    font-weight: 700;
    opacity: 0.52;
    font-size: 1.6rem;
}

.summary {
    display: flex;
    flex-direction: column;
    padding: 10px 0px 42px 0;
}

.skills-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 15px;
    margin-bottom: 20px;
}

.summary__title {
    font-size: 1.8rem;
    color: var(--dark-navy);
    margin: 25px 29px;
}

.summary__left {
    margin-right: auto;
    display: flex;
    align-items: center;
    gap: 10px
}

.summary__left img {
    align-self: baseline;
}

.summary__skill {
    display: flex;
    align-items: end;
    width: 50%;
    font-size: 1.6rem;
    width: 84%;
    border-radius: 10px;
    padding: 15px;
    border: none;
}

.summary__skill__name--reaction {
    color: var(--light-red);
}

.summary__skill__name--memory {
    color: var(--orangey-yellow);
}

.summary__skill__name--verbal {
    color: var(--green-teal);
}

.summary__skill__name--visual {
    color: var(--cobalt-blue)
}

.summary__right {
    color: var(--dark-navy);
    font-weight: 800;
}


.summary__skill--reaction {
    background: linear-gradient(0deg, rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0.95)), #FF5555;
}

.summary__skill--memory {
    background: linear-gradient(0deg, rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0.95)), #FFB21E;
}

.summary__skill--verbal {
    background: linear-gradient(0deg, rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0.95)), #00BB8F;
}

.summary__skill--visual {
    background: linear-gradient(0deg, rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0.95)), #1125D6;
}

.of-100 {
    opacity: 0.5;
    margin-left: 4px;
}

.summary__button {
    background: var(--dark-navy);
    color: var(--white);
    padding: 15px 0;
    border-radius: 50px;
    font-size: 1.8rem;
    border: none;
    align-self: center;
    width: 85%;
    margin-top: 10px;
}

.summary__button:hover {
    background: linear-gradient(180deg, #7755FF 0%, #6943FF 0.01%, #2F2CE9 100%);
    cursor: pointer;
}

@media only screen and (min-width: 37.5em) {
    .main {
        display: flex;
    }

    .result {
        width: 50%;
        height: auto;
    }

    .result__title {
        font-size: 24px;
    }

    .result__subtitle {
        font-size: 3.2rem;
    }

    .summary {
        width: 50%;
    }

    .summary__title {
        font-size: 2.4rem;
    }

    .summary__skill {
        font-size: 1.8rem;
    }

    .score-container {
        width: 200px;
        height: 200px;
    }

    .score-container__score {
        font-size: 7.2rem;
    }

    .score-container__max-score {
        font-size: 1.8 rem;
    }
}

